--- a/resources/assets/custom-theme/custom/animated.css
+++ b/resources/assets/custom-theme/custom/animated.css
@@ -4,7 +4,7 @@
 Project        :   Rapo - HTML5 Bootstrap Admin Template
 Version        :   V.1
 Create Date    :   10/03/20
-Copyright      :   Spruko Technologies Private Limited 
+Copyright      :  HavenPlus Technologies Private Limited 
 Author         :   SprukoSoft
 Author URL     :   https://themeforest.net/user/sprukosoft
 Support	       :   support@spruko.com
