--- a/resources/assets/custom-theme/custom/app.css
+++ b/resources/assets/custom-theme/custom/app.css
@@ -20132,7 +20132,7 @@ a.chip:hover {
 
 /**
 * Admintro v1.0.0 (https://themeforest.net/user/sprukotechnologies)
-* Copyright 2018 Spruko Technologies Private Limited
+* Copyright 2018HavenPlus Technologies Private Limited
 * Licensed under ThemeForest License
 *
 
