--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -22199,60 +22199,60 @@ input:focus, input:hover {
   justify-content: center;
 }
 
-.uhelp-announcement-alertgroup .alert {
+.mbiraHelp-announcement-alertgroup .alert {
   border-radius: 0;
   margin-bottom: 0;
 }
 
-.uhelp-announcement-alertgroup .alert:first-child {
+.mbiraHelp-announcement-alertgroup .alert:first-child {
   margin-bottom: 0 !important;
 }
 
-.uhelp-announcement-alertgroup {
+.mbiraHelp-announcement-alertgroup {
   position: fixed;
   bottom: 0;
   z-index: 999999;
   width: 100%;
 }
 
-.uhelp-announcement-alertgroup .alert .alert-notice span {
+.mbiraHelp-announcement-alertgroup .alert .alert-notice span {
   color: #fff !important;
 }
 
-.uhelp-announcement-alertgroup svg {
+.mbiraHelp-announcement-alertgroup svg {
   fill: #fff !important;
 }
 
-.uhelp-announcement-alertgroup .alert .uhelp-alert-content {
+.mbiraHelp-announcement-alertgroup .alert .mbiraHelp-alert-content {
   font-weight: 300;
 }
 
-.uhelp-attach-container {
+.mbiraHelp-attach-container {
   display: flex;
 }
-.uhelp-attach-container .attach-container-width {
+.mbiraHelp-attach-container .attach-container-width {
   margin-right: 0.5rem;
 }
-.uhelp-attach-container .attach-container-width:last-child {
+.mbiraHelp-attach-container .attach-container-width:last-child {
   margin-right: 0;
 }
-.uhelp-attach-container .file-attach-uhelp {
+.mbiraHelp-attach-container .file-attach-mbiraHelp {
   padding: 0.75rem;
   border-radius: 7px;
 }
-.uhelp-attach-container .file-attach-uhelp svg {
+.mbiraHelp-attach-container .file-attach-mbiraHelp svg {
   width: 1.5rem;
   height: 1.5rem;
   fill: #9ba5ca;
 }
-.uhelp-attach-container .file-attach-uhelp .file-attach-name {
+.mbiraHelp-attach-container .file-attach-mbiraHelp .file-attach-name {
   max-width: 6rem;
 }
-.uhelp-attach-container .file-attach-uhelp .uhelp-attach-acion:hover {
+.mbiraHelp-attach-container .file-attach-mbiraHelp .mbiraHelp-attach-acion:hover {
   background-color: #edf0f9;
 }
 
-.dark-mode .uhelp-attach-container .file-attach-uhelp .uhelp-attach-acion:hover {
+.dark-mode .mbiraHelp-attach-container .file-attach-mbiraHelp .mbiraHelp-attach-acion:hover {
   background-color: #0c0d2c;
 }
 
